--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -37,3 +37,44 @@ header {
     width: 100%;
     
 }
+#changeHeader {
+    color: white;
+    text-align: left;
+    border-bottom: 1px solid white;
+    margin-bottom: 2em;
+  }
+  .changeInputLabel {
+    font-size: 1em;
+    text-decoration: bold;
+  }
+  .ChangeOutputLabels {    
+    text-align: center;
+    font-size: 1.25em;
+    text-decoration: bold;
+    background-color: lightgrey;
+    width: 22.5%;
+    height: 10em;
+    margin: 8px;
+    border-radius: 8px;
+  }
+  .changeText {  
+    font-size: 1.2rem;
+    text-align: center;
+  }
+  .changeLabels {
+    font-size: 1em;
+    text-decoration: bold;
+    vertical-align: middle;
+    line-height: 70px;
+  }
+  .changeOutputs {
+    text-decoration: bold;
+    color: black;
+    margin-top: -1.5em;
+  }
+  .changeOutcome {
+    text-align: center;
+    height: 4%;
+    width: 100%;
+  }
+  
